--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gasp-v4",
-  "version": "0.1.0",
+  "version": "2.9.0",
   "private": true,
-  "homepage": "https://duosora.github.io/dgaspv4",
+  "homepage": "https://rusurano.github.io/dgaspv4-test",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -10,22 +10,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
-    "gh-pages": "^3.1.0",
-    "jquery": "^1.9.1",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "immutability-helper": "^3.1.1",
+    "jquery": "^3.6.0",
+    "nanoid": "^3.1.23",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.1",
-    "react-query": "^2.5.6",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1",
-    "typescript": "^3.9.7"
+    "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "reactstrap": "^8.9.0",
+    "regexify-string": "^1.0.16",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -o origin",
+    "stage": "gh-pages -d build -o staging",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.0"
   }
 }
